--- a/RefreshJFrame/nbproject/project.properties
+++ b/RefreshJFrame/nbproject/project.properties
@@ -1,10 +1,9 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
+annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=Slide81
-application.vendor=nctuan
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -29,19 +28,14 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/Slide81.jar
+dist.jar=${dist.dir}/RefreshJFrame.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/Slide81
-endorsed.classpath=
+dist.jlink.output=${dist.jlink.dir}/RefreshJFrame
 excludes=
-file.reference.javax.activation-1.2.0.jar=..\\..\\jar_files\\javax.activation-1.2.0.jar
-file.reference.javax.mail-1.6.2.jar=..\\..\\javax.mail-1.6.2.jar\\javax.mail-1.6.2.jar
 includes=**
 jar.compress=false
-javac.classpath=\
-    ${file.reference.javax.activation-1.2.0.jar}:\
-    ${file.reference.javax.mail-1.6.2.jar}
+javac.classpath=
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -76,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=Slide81
-main.class=slide81.SendEmail
+jlink.launcher.name=RefreshJFrame
+main.class=refreshjframe.RefreshJFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
